<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/common_title"/>
    
    <ImageView android:id="@+id/user_icon"
        android:layout_marginTop="10dp"
        android:layout_width="@dimen/login_icon"
        android:layout_height="@dimen/login_icon"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/login_icon"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        android:orientation="horizontal">
        
        <EditText android:id="@+id/account"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/account_hint"
	        android:inputType="phone"
	        android:lines="1" 
	        android:textSize="15sp"
	        android:background="@null"
	        android:layout_gravity="bottom"
	        android:gravity="bottom"
	        android:textColor="@color/login_text"/>
                
        <ImageView android:id="@+id/clear_account"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="8dp"
            android:layout_gravity="bottom"
            android:src="@drawable/btn_clear"/>
        
    </LinearLayout>
    
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_line"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        android:orientation="horizontal">
        
        <EditText android:id="@+id/password"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/password_hint"
	        android:inputType="textPassword"
	        android:lines="1"
	        android:textSize="15sp"
	        android:textColor="@color/login_text"
	        android:layout_gravity="bottom"
	        android:gravity="bottom"
	        android:background="@null"/>
        
        <ImageView android:id="@+id/clear_password"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="8dp"
            android:layout_gravity="bottom"
            android:src="@drawable/btn_clear"/>
                
    </LinearLayout>
    
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/login_line"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"/>
    
    <Button android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:background="@drawable/btn_login"/>
    
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin">
        
        <Button android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingRight="25dp"
            android:text="@string/register"
            android:textSize="15sp"
            android:textColor="#419DD0"
            android:background="@null"/>
        
        <Button android:id="@+id/lost_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingLeft="25dp"
            android:text="@string/lost_password"
            android:textSize="15sp"
            android:textColor="@color/login_text"
            android:background="@null"/>
        
    </RelativeLayout>

</LinearLayout>
