<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <!-- <RelativeLayout  
        android:id="@+id/id_detail_title_layout"  
	    android:layout_width="match_parent"  
	    android:layout_height="45dp"  
	    android:background="@drawable/bottombar_bg">  
	  
	    <ImageButton  
	        android:id="@+id/id_detail_back_btn"  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"  
	        android:layout_centerVertical="true"  
	        android:layout_marginLeft="3dp"  
	        android:background="@drawable/logo" />  
	  
	    <TextView  
	        android:id="@+id/id_detail_txt"  
	        android:layout_width="fill_parent"  
	        android:layout_height="fill_parent"  
	        android:gravity="center"  
	        android:text="@string/video_detail"  
	        android:textColor="@color/white"  
	        android:textSize="20sp"  
	        android:textStyle="bold" /> 
	        
		<Button  
	        android:id="@+id/id_detail_favrite_btn"  
	        android:layout_width="wrap_content"  
	        android:layout_height="wrap_content"  
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"  
	        android:layout_marginRight="10dp"  
	        android:background="@drawable/search" />  
  
	</RelativeLayout> -->

    <include layout="@layout/common_title"/>

    <ImageView
        android:id="@+id/pic"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/video_default"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <Button
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/play"
            android:textColor="@color/common_text"
            android:textSize="15sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/line"/>

        <Button
            android:id="@+id/collection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/collection"
            android:textColor="@color/common_text"
            android:textSize="15sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>

    <TextView
        android:id="@+id/id_detail_video_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/common_text"
        android:textSize="15sp"/>


    <TextView
        android:id="@+id/tv_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/common_text"
        android:textSize="13sp"/>
    <TextView
        android:id="@+id/id_detail_video_counts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/common_text"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/tv_collectionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/common_text"
        android:textSize="13sp"/>


    <TextView
        android:id="@+id/tv_palyCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/common_text"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/id_detail_video_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/common_text"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/id_detail_video_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/common_text"
        android:textSize="13sp"/>



    <TextView
        android:id="@+id/class_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:textColor="@color/common_text"
        android:textSize="13sp"/>

    <TextView
        android:id="@+id/id_detail_video_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="5dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/common_text"
        android:textSize="13sp"/>

    <CheckBox
        android:id="@+id/more_text"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:layout_marginRight="5dp"
        android:button="@null"
        android:checked="false"
        android:drawableLeft="@drawable/btn_text_check"
        android:padding="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/line"/>

    <RelativeLayout
        android:id="@+id/id_detail_recommand_layout"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/id_detail_recommand_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/video_recommand"
            android:textColor="@color/common_text"
            android:textSize="@dimen/title_size"/>

        <!-- <GridView
          android:id="@+id/recommand_gridview"
          android:layout_width="wrap_content"
          android:layout_height="120dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:horizontalSpacing="10dp"
          android:scrollbars="none"
          android:gravity="center"/> -->

        <com.mygt.vrapp.view.HorizontalListView
            android:id="@+id/recommand_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_detail_recommand_text"
            android:layout_marginTop="5dp">
        </com.mygt.vrapp.view.HorizontalListView>

    </RelativeLayout>

</LinearLayout>